--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,14 +44,6 @@
           </li>
           {% endif %}
 
-          <!-- RSS -->
-          <li class="navigation__item_social">
-            <a href="/feed.xml" rel="author" title="RSS" target="_blank">
-              <i class='social fa fa-rss fa-2x'></i>
-              <span class="label">RSS</span>
-            </a>
-          </li>
-
           {% if site.social.mail %}
           <!-- Email -->
           <li class="navigation__item_social">
@@ -69,7 +61,7 @@
 
         <div class = "footer_div">
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} |
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
             </p>
         	<div align="right">
     			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
